@@ -2,7 +2,8 @@ Revision history for PCRD
 
 {{$NEXT}}
 	- Project is now based on Mite
-	- allow multiple hooks
+	- Allow multiple hooks
+	- Add mute feature to Sound module
 
 0.003 - 2025-05-19
 	- Execute hook now gets passed the return value of the function
